<resources>
    <string name="app_name">Who Sings</string>
    <string name="splash">Splash</string>
    <string name="login">Login</string>
    <string name="title_people">Scores</string>
    <string name="type_user">Type your user name</string>
    <string name="play">Play</string>
    <string name="play_game">Play Game</string>
    <string name="scores">Scores</string>
    <string name="no_users">No stored user</string>
    <string name="pos">Pos</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="last_score_format">%s, your last score is %d!</string>
    <string name="score_format">Score: %d</string>
    <string name="lost_format">%s, you have lost!</string>
    <string name="record_format">Record: %d</string>
    <string name="restart">Restart</string>
    <string name="logout">Logout</string>
    <string name="logging_as_format">Logging as\n%s</string>
</resources>