<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo_400"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginFragment">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/materialTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/regular_space"
                android:layout_marginTop="@dimen/large_space"
                android:layout_marginEnd="@dimen/regular_space"
                app:layout_constraintTop_toTopOf="parent"
                app:mtf_animationDuration="500"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_image="@drawable/user"
                app:mtf_labelColor="@color/white"
                app:mtf_openKeyboardOnFocus="true"
                tools:layout_editor_absoluteX="20dp">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_user"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress|textCapWords"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/regular_space"
                android:layout_marginTop="@dimen/large_space"
                android:layout_marginEnd="@dimen/regular_space"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/materialTextField">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:contentDescription="@string/play"
                        android:scaleType="centerInside"
                        android:src="@drawable/play"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/txtPlay"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtPlay"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center|start"
                        android:text="@string/play_game"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imgPlay"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/regular_space"
                android:layout_marginTop="@dimen/regular_space"
                android:layout_marginEnd="@dimen/regular_space"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardPlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgScores"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:contentDescription="@string/scores"
                        android:scaleType="centerInside"
                        android:src="@drawable/scores"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/txtScores"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtScores"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center|start"
                        android:text="@string/scores"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imgScores"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>